--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "GET UR SWEET FILE BRA", :action => :download, :file_name => "public/bullshit.rb" %>
+<%= link_to "GET UR SWEET FILE BRA", :action => :download %>
