Add fake buttons for file upload ready for styling

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,13 @@
-<%= form_tag({action: :upload}, multipart: true) do %>
-  <%= file_field_tag 'file' %>
-  <%= submit_tag 'uncomment', name: 'removal_type' %>
-  <%= submit_tag 'unlog', name: 'removal_type' %>
-<% end %>
+<div class="uploader" hidden>
+  <%= form_tag({action: :upload}, multipart: true) do %>
+    <%= file_field_tag 'file', onchange: "displayFilename()" %>
+    <%= submit_tag 'uncomment', name: 'removal_type', id: 'uncomment' %>
+    <%= submit_tag 'unlog', name: 'removal_type', id: 'unlog' %>
+  <% end %>
+</div>
+
+<button id="uploadFileBtn" onclick="upload()">
+  <input id="uploadFile" placeholder="Choose File" disabled="disabled" />
+</button>
+<button id="uncommentBtn" onclick="uncomment()">Uncomment</button>
+<button id="unlogBtn" onclick="unlog()">Unlog</button>
